# rust-exercises

array_map/src/: main.rs
array_map2/: Cargo.toml
array_map2/src/: main.rs
calculator/: Cargo.toml
calculator/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
flatten_and_filter/: Cargo.toml
flatten_and_filter/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
library2/: library-tcc.txt  library.json
library2/src/: library.rs  repl.rs
library3/: library.json
library3/src/: library.rs  main.rs  repl.rs
library4/: Cargo.toml
library4/src/: library.rs  repl.rs
market1/: Cargo.toml  storage-a.json
market1/src/: inventory.rs  main.rs  product.rs  repl.rs  warehouse.rs
prime_checker/: Cargo.toml
prime_checker/src/: main.rs
shapecalc/: Cargo.toml
shapecalc/src/: main.rs  shapes.rs
sorting/: Cargo.toml
sorting/src/: main.rs
stack/src/: main.rs
string_edit/: Cargo.toml
string_edit/src/: main.rs
vigenere_cipher/: Cargo.toml
vigenere_cipher/src/: main.rs
