[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shlex = "1.3.0"
